Add custom login attribute