@@ -3,27 +3,14 @@
  */
 package org.ligoj.app.plugin.id.ldap.resource;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.nio.charset.StandardCharsets;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import jakarta.ws.rs.NotAuthorizedException;
 import jakarta.ws.rs.core.StreamingOutput;
-
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.ligoj.app.iam.Activity;
-import org.ligoj.app.iam.GroupOrg;
 import org.ligoj.app.iam.UserOrg;
 import org.ligoj.app.iam.model.CacheCompany;
 import org.ligoj.app.iam.model.CacheGroup;
@@ -31,7 +18,6 @@ import org.ligoj.app.iam.model.CacheMembership;
 import org.ligoj.app.iam.model.CacheUser;
 import org.ligoj.app.model.Node;
 import org.ligoj.app.model.ParameterValue;
-import org.ligoj.app.model.Project;
 import org.ligoj.app.model.Subscription;
 import org.ligoj.app.plugin.id.ldap.dao.UserLdapRepository;
 import org.ligoj.app.plugin.id.resource.IdentityResource;
@@ -47,8 +33,12 @@ import org.mockito.Mockito;
 import org.springframework.ldap.UncategorizedLdapException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
 import org.springframework.test.annotation.Rollback;
+
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * Test class of {@link LdapPluginResource}
@@ -59,7 +49,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void deleteNoMoreGroup() {
-		final Subscription subscription = new Subscription();
+		final var subscription = new Subscription();
 		subscription.setProject(projectRepository.findByName("Jupiter"));
 		subscription.setNode(nodeRepository.findOneExpected("service:id:ldap:dig"));
 		em.persist(subscription);
@@ -68,7 +58,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		setGroup(subscription, "any");
 
 		initSpringSecurityContext("fdaugan");
-		final Map<String, String> parameters = subscriptionResource.getParametersNoCheck(subscription.getId());
+		final var parameters = subscriptionResource.getParametersNoCheck(subscription.getId());
 		Assertions.assertFalse(resource.checkSubscriptionStatus(parameters).getStatus().isUp());
 
 		resource.delete(subscription.getId(), true);
@@ -78,12 +68,12 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	}
 
 	/**
-	 * The unsubscription without deletion has no effect
+	 * The un-subscription without deletion has no effect
 	 */
 	@Test
 	void delete() {
 		initSpringSecurityContext("fdaugan");
-		final Map<String, String> parameters = subscriptionResource.getParameters(subscription);
+		final var parameters = subscriptionResource.getParameters(subscription);
 		Assertions.assertTrue(resource.checkSubscriptionStatus(parameters).getStatus().isUp());
 		resource.delete(subscription, false);
 		em.flush();
@@ -93,36 +83,36 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void getVersion() {
-		final String version = resource.getVersion(null);
+		final var version = resource.getVersion(null);
 		Assertions.assertEquals("3", version);
 	}
 
 	@Test
 	void getLastVersion() {
-		final String lastVersion = resource.getLastVersion();
+		final var lastVersion = resource.getLastVersion();
 		Assertions.assertEquals("3", lastVersion);
 	}
 
 	@Test
 	void validateGroupNotExists() {
-		final Map<String, String> parameters = pvResource.getNodeParameters("service:id:ldap:dig");
+		final var parameters = pvResource.getNodeParameters("service:id:ldap:dig");
 		parameters.put(IdentityResource.PARAMETER_GROUP, "broken");
 		MatcherUtil.assertThrows(Assertions.assertThrows(ValidationJsonException.class, () -> resource.validateGroup(parameters)), IdentityResource.PARAMETER_GROUP, BusinessException.KEY_UNKNOWN_ID);
 	}
 
 	@Test
 	void validateGroupNotProject() {
-		final Map<String, String> parameters = pvResource.getNodeParameters("service:id:ldap:dig");
-		parameters.put(IdentityResource.PARAMETER_GROUP, "vigireport");
+		final var parameters = pvResource.getNodeParameters("service:id:ldap:dig");
+		parameters.put(IdentityResource.PARAMETER_GROUP, "VigiReport");
 		MatcherUtil.assertThrows(Assertions.assertThrows(ValidationJsonException.class, () -> resource.validateGroup(parameters)), IdentityResource.PARAMETER_GROUP, "group-type");
 	}
 
 	@Test
 	void validateGroup() {
-		final Map<String, String> parameters = pvResource.getNodeParameters("service:id:ldap:dig");
+		final var parameters = pvResource.getNodeParameters("service:id:ldap:dig");
 		parameters.put(IdentityResource.PARAMETER_GROUP, "ligoj-jupiter");
 
-		final INamableBean<String> group = resource.validateGroup(parameters);
+		final var group = resource.validateGroup(parameters);
 		Assertions.assertNotNull(group);
 		Assertions.assertEquals("ligoj-jupiter", group.getId());
 		Assertions.assertEquals("ligoj-Jupiter", group.getName());
@@ -142,8 +132,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	@Test
 	void createAlreadyExist() {
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(newProject("sea-octopus"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -161,7 +151,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	@Test
 	void createSubGroup() {
 		// Create the parent group
-		final Project newProject = create("sea-parent").getProject();
+		final var newProject = create("sea-parent").getProject();
 		createSubGroup(newProject, "sea-parent", "sea-parent-client");
 	}
 
@@ -171,7 +161,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	@Test
 	void createNotCompliantGroupForParent() {
 		// Create the parent group
-		final Project newProject = create("sea-parent2").getProject();
+		final var newProject = create("sea-parent2").getProject();
 		createSubGroup(newProject, "sea-parent2", "sea-parent2-client");
 
 		MatcherUtil.assertThrows(Assertions.assertThrows(ValidationJsonException.class, () -> createSubGroup(newProject, "sea-parent2-client", "sea-parent2-dev")), IdentityResource.PARAMETER_GROUP, "pattern");
@@ -188,8 +178,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		Assertions.assertNotNull(projectCustomerLdapRepository.findById("ou=project,dc=sample,dc=com", "sea"));
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(newProject("sea-octopus"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -199,8 +189,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		setOu(subscription2, "sea");
 
 		// Invoke link for an already linked entity, since for now
-		MatcherUtil.assertThrows(Assertions.assertThrows(ValidationJsonException.class,
-				() -> basicCreate(subscription2)), IdentityResource.PARAMETER_GROUP, "pattern");
+		MatcherUtil.assertThrows(Assertions.assertThrows(ValidationJsonException.class, () -> basicCreate(subscription2)), IdentityResource.PARAMETER_GROUP, "pattern");
 	}
 
 	/**
@@ -215,8 +204,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		Assertions.assertNotNull(projectCustomerLdapRepository.findById("ou=project,dc=sample,dc=com", "sea"));
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(newProject("sea-octopus"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -239,8 +228,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		Assertions.assertNotNull(projectCustomerLdapRepository.findById("ou=project,dc=sample,dc=com", "sea"));
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(newProject("sea-invalid-ou"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -264,15 +253,15 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		Assertions.assertNotNull(projectCustomerLdapRepository.findById("ou=project,dc=sample,dc=com", "sea"));
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
-		subscription2.setProject(newProject("sea-orpahn"));
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
+		subscription2.setProject(newProject("sea-orphan"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
 
 		// Add parameters
-		setGroup(subscription2, "sea-orpahn-any");
-		setParentGroup(subscription2, "sea-orpahn");
+		setGroup(subscription2, "sea-orphan-any");
+		setParentGroup(subscription2, "sea-orphan");
 		setOu(subscription2, "sea");
 
 		// Invoke link for an already linked entity, since for now
@@ -291,8 +280,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		Assertions.assertFalse(projectCustomerLdapRepository.findAll("ou=project,dc=sample,dc=com").contains("some"));
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(newProject("some-new-project"));
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -304,7 +293,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		basicCreate(subscription2);
 
 		// Checks
-		final GroupOrg groupLdap = getGroup().findById("some-new-project");
+		final var groupLdap = getGroup().findById("some-new-project");
 		Assertions.assertNotNull(groupLdap);
 		Assertions.assertEquals("some-new-project", groupLdap.getName());
 		Assertions.assertEquals("cn=some-new-project,ou=some,ou=project,dc=sample,dc=com", groupLdap.getDn());
@@ -319,8 +308,8 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	void link() {
 
 		// Attach the new group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
-		final Subscription subscription2 = new Subscription();
+		final var subscription = em.find(Subscription.class, this.subscription);
+		final var subscription2 = new Subscription();
 		subscription2.setProject(subscription.getProject());
 		subscription2.setNode(subscription.getNode());
 		em.persist(subscription2);
@@ -330,29 +319,29 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		// Add parameters
 		setGroup(subscription2, "sea-octopus");
 
-		final CacheCompany company = new CacheCompany();
+		final var company = new CacheCompany();
 		company.setDescription("ou=c,dc=sample,dc=com");
 		company.setId("c");
 		company.setName("C");
 		em.persist(company);
 
-		final CacheUser user = new CacheUser();
+		final var user = new CacheUser();
 		user.setId(DEFAULT_USER);
 		user.setCompany(company);
 		em.persist(user);
 
-		final CacheGroup group = new CacheGroup();
+		final var group = new CacheGroup();
 		group.setDescription("cn=g,dc=sample,dc=com");
 		group.setId("ligoj-jupiter");
 		group.setName("ligoj-jupiter");
 		// em.persist(group);
 
-		final CacheMembership membership = new CacheMembership();
+		final var membership = new CacheMembership();
 		membership.setUser(user);
 		membership.setGroup(group);
 		em.persist(membership);
 
-		// Invoke link for an already linkd entity, since for now
+		// Invoke link for an already linked entity, since for now
 		basicLink(subscription2);
 		// Nothing to validate for now...
 		resource.delete(subscription2.getId(), false);
@@ -372,7 +361,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	@Test
 	void linkNotVisibleGroup() {
 		// Attach the wrong group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
+		final var subscription = em.find(Subscription.class, this.subscription);
 		setGroup(subscription, "sea-octopus");
 
 		// Invoke link for an already created entity, since for now
@@ -386,7 +375,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	@Test
 	void linkNotExistingGroup() {
 		// Attach the wrong group
-		final Subscription subscription = em.find(Subscription.class, this.subscription);
+		final var subscription = em.find(Subscription.class, this.subscription);
 		setGroup(subscription, "any-g");
 
 		initSpringSecurityContext("fdaugan");
@@ -395,29 +384,27 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void checkStatus() {
-		Assertions.assertTrue(
-				resource.checkStatus("service:id:ldap:dig", subscriptionResource.getParametersNoCheck(subscription)));
+		Assertions.assertTrue(resource.checkStatus("service:id:ldap:dig", subscriptionResource.getParametersNoCheck(subscription)));
 	}
 
 	@Test
 	void checkSubscriptionStatus() {
-		Assertions.assertTrue(resource.checkSubscriptionStatus(subscriptionResource.getParametersNoCheck(subscription))
-				.getStatus().isUp());
+		Assertions.assertTrue(resource.checkSubscriptionStatus(subscriptionResource.getParametersNoCheck(subscription)).getStatus().isUp());
 	}
 
 	@Test
 	void findGroupsByNameNoRight() {
 		initSpringSecurityContext("any");
-		final List<INamableBean<String>> jobs = resource.findGroupsByName("piTer");
+		final var jobs = resource.findGroupsByName("piTer");
 		Assertions.assertEquals(0, jobs.size());
 	}
 
 	@Test
 	void findGroupsByName() {
-		final List<INamableBean<String>> jobs = resource.findGroupsByName("piTer");
+		final var jobs = resource.findGroupsByName("piTer");
 		Assertions.assertFalse(jobs.isEmpty());
-		Assertions.assertEquals("ligoj-Jupiter", jobs.get(0).getName());
-		Assertions.assertEquals("ligoj-jupiter", jobs.get(0).getId());
+		Assertions.assertEquals("ligoj-Jupiter", jobs.getFirst().getName());
+		Assertions.assertEquals("ligoj-jupiter", jobs.getFirst().getId());
 	}
 
 	@Test
@@ -426,39 +413,36 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		reloadLdapCache();
 
 		// Stub JIRA
-		final SampleActivityProvider activitiesProvider = Mockito.mock(SampleActivityProvider.class);
-		final Map<String, Activity> activities = new HashMap<>();
-		final Activity activity = new Activity();
+		final var activitiesProvider = Mockito.mock(SampleActivityProvider.class);
+		final var activities = new HashMap<String, Activity>();
+		final var activity = new Activity();
 		activity.setLastConnection(getDate(2015, 1, 1));
 		activities.put("admin-test", activity);
-		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any()))
-				.thenReturn(activities);
+		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any())).thenReturn(activities);
 
 		// Stub service locator
-		final ServicePluginLocator servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
-		final ServicePluginLocator realServicePluginLocator = this.servicePluginLocator;
+		final var servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
+		final var realServicePluginLocator = this.servicePluginLocator;
 		Mockito.when(servicePluginLocator.getResource(ArgumentMatchers.anyString())).then(invocation -> {
-			final String resource = (String) invocation.getArguments()[0];
+			final var resource = (String) invocation.getArguments()[0];
 			if (resource.equals("service:bt:jira:6")) {
 				return activitiesProvider;
 			}
 			return realServicePluginLocator.getResource(resource);
 		});
 		initSpringSecurityContext(DEFAULT_USER);
-		final ByteArrayOutputStream output = new ByteArrayOutputStream();
-		final LdapPluginResource resource = new LdapPluginResource();
+		final var output = new ByteArrayOutputStream();
+		final var resource = new LdapPluginResource();
 		applicationContext.getAutowireCapableBeanFactory().autowireBean(resource);
 		resource.servicePluginLocator = servicePluginLocator;
 
 		// Call
 		((StreamingOutput) resource.getProjectActivitiesCsv(subscription, "file1").getEntity()).write(output);
 
-		final List<String> csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()),
-				StandardCharsets.UTF_8);
+		final var csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()), StandardCharsets.UTF_8);
 		Assertions.assertEquals(2, csvLines.size());
-		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.get(0));
-		Assertions.assertEquals("admin-test;Arnaud;Test;arnaud.test@sample.com;2015/01/01 00:00:00",
-				csvLines.get(1));
+		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.getFirst());
+		Assertions.assertEquals("admin-test;Arnaud;Test;arnaud.test@sample.com;2015/01/01 00:00:00", csvLines.get(1));
 	}
 
 	@Test
@@ -467,39 +451,36 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		reloadLdapCache();
 
 		// Stub JIRA
-		final SampleActivityProvider activitiesProvider = Mockito.mock(SampleActivityProvider.class);
-		final Map<String, Activity> activities = new HashMap<>();
-		final Activity activity = new Activity();
+		final var activitiesProvider = Mockito.mock(SampleActivityProvider.class);
+		final var activities = new HashMap<String, Activity>();
+		final var activity = new Activity();
 		activity.setLastConnection(getDate(2015, 1, 1));
 		activities.put("admin-test", activity);
-		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any()))
-				.thenReturn(activities);
+		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any())).thenReturn(activities);
 
 		// Stub service locator
-		final ServicePluginLocator servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
-		final ServicePluginLocator realServicePluginLocator = this.servicePluginLocator;
+		final var servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
+		final var realServicePluginLocator = this.servicePluginLocator;
 		Mockito.when(servicePluginLocator.getResource(ArgumentMatchers.anyString())).then(invocation -> {
-			final String resource = (String) invocation.getArguments()[0];
+			final var resource = (String) invocation.getArguments()[0];
 			if (resource.equals("service:bt:jira:6")) {
 				return activitiesProvider;
 			}
 			return realServicePluginLocator.getResource(resource);
 		});
 		initSpringSecurityContext(DEFAULT_USER);
-		final ByteArrayOutputStream output = new ByteArrayOutputStream();
-		final LdapPluginResource resource = new LdapPluginResource();
+		final var output = new ByteArrayOutputStream();
+		final var resource = new LdapPluginResource();
 		applicationContext.getAutowireCapableBeanFactory().autowireBean(resource);
 		resource.servicePluginLocator = servicePluginLocator;
 
 		// Call
 		((StreamingOutput) resource.getGroupActivitiesCsv(subscription, "file1").getEntity()).write(output);
 
-		final List<String> csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()),
-				StandardCharsets.UTF_8);
+		final var csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()), StandardCharsets.UTF_8);
 		Assertions.assertEquals(2, csvLines.size());
-		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.get(0));
-		Assertions.assertEquals("admin-test;Arnaud;Test;arnaud.test@sample.com;2015/01/01 00:00:00",
-				csvLines.get(1));
+		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.getFirst());
+		Assertions.assertEquals("admin-test;Arnaud;Test;arnaud.test@sample.com;2015/01/01 00:00:00", csvLines.get(1));
 	}
 
 	@Test
@@ -508,42 +489,35 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		reloadLdapCache();
 
 		// Stub JIRA
-		final SampleActivityProvider activitiesProvider = Mockito.mock(SampleActivityProvider.class);
-		final Map<String, Activity> activities = new HashMap<>();
-		final Activity activity = new Activity();
+		final var activitiesProvider = Mockito.mock(SampleActivityProvider.class);
+		final var activities = new HashMap<String, Activity>();
+		final var activity = new Activity();
 		activity.setLastConnection(getDate(2015, 1, 1));
 		activities.put("admin-test", activity);
-		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any()))
-				.thenReturn(activities);
+		Mockito.when(activitiesProvider.getActivities(ArgumentMatchers.anyInt(), ArgumentMatchers.any())).thenReturn(activities);
 
 		// Stub service locator
-		final ServicePluginLocator servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
-		final ServicePluginLocator realServicePluginLocator = this.servicePluginLocator;
+		final var servicePluginLocator = Mockito.mock(ServicePluginLocator.class);
+		final var realServicePluginLocator = this.servicePluginLocator;
 		Mockito.when(servicePluginLocator.getResource(ArgumentMatchers.anyString())).then(invocation -> {
-			final String resource = (String) invocation.getArguments()[0];
+			final var resource = (String) invocation.getArguments()[0];
 			if (resource.equals("service:bt:jira:6")) {
 				return activitiesProvider;
 			}
 			return realServicePluginLocator.getResource(resource);
 		});
 		initSpringSecurityContext(DEFAULT_USER);
-		final ByteArrayOutputStream output = new ByteArrayOutputStream();
-		final LdapPluginResource resource = new LdapPluginResource();
+		final var output = new ByteArrayOutputStream();
+		final var resource = new LdapPluginResource();
 		applicationContext.getAutowireCapableBeanFactory().autowireBean(resource);
 		resource.servicePluginLocator = servicePluginLocator;
 
 		// Get the subscription using a subscribed broken group
-		final int otherSubscription = em
-				.createQuery(
-						"SELECT s.id FROM Subscription s WHERE s.project.name = ?1 AND s.node.id LIKE CONCAT(?2,'%')",
-						Integer.class)
-				.setParameter(1, "Jupiter").setParameter(2, IdentityResource.SERVICE_KEY).setMaxResults(2)
-				.getResultList().get(1);
+		final int otherSubscription = em.createQuery("SELECT s.id FROM Subscription s WHERE s.project.name = ?1 AND s.node.id LIKE CONCAT(?2,'%')", Integer.class).setParameter(1, "Jupiter").setParameter(2, IdentityResource.SERVICE_KEY).setMaxResults(2).getResultList().get(1);
 		((StreamingOutput) resource.getGroupActivitiesCsv(otherSubscription, "file1").getEntity()).write(output);
 
-		final List<String> csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()),
-				StandardCharsets.UTF_8);
-		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.get(0));
+		final var csvLines = IOUtils.readLines(new ByteArrayInputStream(output.toByteArray()), StandardCharsets.UTF_8);
+		Assertions.assertEquals("user;firstName;lastName;mail;JIRA 6", csvLines.getFirst());
 		Assertions.assertEquals(1, csvLines.size());
 	}
 
@@ -556,35 +530,35 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void addSubscriptionActivitiesDuplicateNode() throws Exception {
-		final Map<String, Map<String, Activity>> activities = new HashMap<>();
-		final LdapPluginResource resource = new LdapPluginResource();
-		final Subscription susbscription = new Subscription();
-		final Node service = new Node();
+		final var activities = new HashMap<String, Map<String, Activity>>();
+		final var resource = new LdapPluginResource();
+		final var subscription = new Subscription();
+		final var service = new Node();
 		service.setId("J");
-		susbscription.setNode(service);
-		final SampleActivityProvider plugin = Mockito.mock(SampleActivityProvider.class);
-		final Set<INamableBean<String>> nodes = new HashSet<>();
+		subscription.setNode(service);
+		final var plugin = Mockito.mock(SampleActivityProvider.class);
+		final var nodes = new HashSet<INamableBean<String>>();
 		nodes.add(service);
-		resource.addSubscriptionActivities(activities, null, susbscription, plugin, nodes);
+		resource.addSubscriptionActivities(activities, null, subscription, plugin, nodes);
 		Assertions.assertTrue(activities.isEmpty());
 	}
 
 	@Test
 	void addSubscriptionActivities() throws Exception {
-		final LdapPluginResource resource = new LdapPluginResource();
-		final Map<String, Map<String, Activity>> activities = new HashMap<>();
-		final Subscription susbscription = new Subscription();
-		final Node service = new Node();
+		final var resource = new LdapPluginResource();
+		final var activities = new HashMap<String, Map<String, Activity>>();
+		final var subscription = new Subscription();
+		final var service = new Node();
 		service.setId("J1");
-		susbscription.setNode(service);
-		susbscription.setId(1);
-		final SampleActivityProvider plugin = Mockito.mock(SampleActivityProvider.class);
-		final Map<String, Activity> activities1 = new HashMap<>();
-		final Activity activity2 = new Activity();
+		subscription.setNode(service);
+		subscription.setId(1);
+		final var plugin = Mockito.mock(SampleActivityProvider.class);
+		final var activities1 = new HashMap<String, Activity>();
+		final var activity2 = new Activity();
 		activities1.put(DEFAULT_USER, activity2);
 		Mockito.when(plugin.getActivities(1, null)).thenReturn(activities1);
 		final Set<INamableBean<String>> nodes = new HashSet<>();
-		resource.addSubscriptionActivities(activities, null, susbscription, plugin, nodes);
+		resource.addSubscriptionActivities(activities, null, subscription, plugin, nodes);
 		Assertions.assertEquals(1, activities.size());
 		Assertions.assertTrue(activities.containsKey(DEFAULT_USER));
 		Assertions.assertEquals(1, activities.get(DEFAULT_USER).size());
@@ -594,23 +568,23 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void addSubscriptionActivitiesDuplicateUser() throws Exception {
-		final LdapPluginResource resource = new LdapPluginResource();
-		final Map<String, Map<String, Activity>> activities = new HashMap<>();
+		final var resource = new LdapPluginResource();
+		final var activities = new HashMap<String, Map<String, Activity>>();
 		activities.put(DEFAULT_USER, new HashMap<>());
-		final Activity activity1 = new Activity();
+		final var activity1 = new Activity();
 		activities.get(DEFAULT_USER).put("J0", activity1);
-		final Subscription susbscription = new Subscription();
-		final Node service = new Node();
+		final var subscription = new Subscription();
+		final var service = new Node();
 		service.setId("J1");
-		susbscription.setNode(service);
-		susbscription.setId(1);
-		final SampleActivityProvider plugin = Mockito.mock(SampleActivityProvider.class);
-		final Map<String, Activity> activities1 = new HashMap<>();
-		final Activity activity2 = new Activity();
+		subscription.setNode(service);
+		subscription.setId(1);
+		final var plugin = Mockito.mock(SampleActivityProvider.class);
+		final var activities1 = new HashMap<String, Activity>();
+		final var activity2 = new Activity();
 		activities1.put(DEFAULT_USER, activity2);
 		Mockito.when(plugin.getActivities(1, null)).thenReturn(activities1);
 		final Set<INamableBean<String>> nodes = new HashSet<>();
-		resource.addSubscriptionActivities(activities, null, susbscription, plugin, nodes);
+		resource.addSubscriptionActivities(activities, null, subscription, plugin, nodes);
 		Assertions.assertEquals(1, activities.size());
 		Assertions.assertTrue(activities.containsKey(DEFAULT_USER));
 		Assertions.assertEquals(2, activities.get(DEFAULT_USER).size());
@@ -621,7 +595,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void findCustomersByName() {
-		final Collection<INamableBean<String>> customers = resource.findCustomersByName("ea");
+		final var customers = resource.findCustomersByName("ea");
 		Assertions.assertEquals(1, customers.size());
 		Assertions.assertEquals("sea", customers.iterator().next().getName());
 		Assertions.assertEquals("sea", customers.iterator().next().getId());
@@ -634,18 +608,17 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void acceptNotMatch() {
-		final Node ldap = new Node();
+		final var ldap = new Node();
 		ldap.setId("service:id:ldap:test");
 		ldap.setRefined(nodeRepository.findOneExpected("service:id:ldap"));
 		ldap.setName("LDAP Test");
 		nodeRepository.saveAndFlush(ldap);
-		final ParameterValue parameterValue = new ParameterValue();
+		final var parameterValue = new ParameterValue();
 		parameterValue.setNode(ldap);
 		parameterValue.setParameter(parameterRepository.findOneExpected("service:id:uid-pattern"));
-		parameterValue.setData("-nomatch-");
+		parameterValue.setData("-no-match-");
 		em.persist(parameterValue);
-		Assertions.assertFalse(
-				resource.accept(new UsernamePasswordAuthenticationToken("some", ""), "service:id:ldap:test"));
+		Assertions.assertFalse(resource.accept(new UsernamePasswordAuthenticationToken("some", ""), "service:id:ldap:test"));
 	}
 
 	@Test
@@ -656,8 +629,7 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 		ldap.setName("LDAP Test");
 		nodeRepository.saveAndFlush(ldap);
 		persistParameter(ldap, IdentityResource.PARAMETER_UID_PATTERN, "some-.*-text");
-		Assertions.assertTrue(resource.accept(new UsernamePasswordAuthenticationToken("some-awesome-text", ""),
-				"service:id:ldap:test"));
+		Assertions.assertTrue(resource.accept(new UsernamePasswordAuthenticationToken("some-awesome-text", ""), "service:id:ldap:test"));
 	}
 
 	@Test
@@ -677,8 +649,16 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 	}
 
 	private void authenticatePrimary() {
-		final var authentication = new UsernamePasswordAuthenticationToken("fdaugan", "Azerty01");
+		final var authentication = new UsernamePasswordAuthenticationToken("fdaugan", "Secret01");
 		Assertions.assertSame(authentication, resource.authenticate(authentication, "service:id:ldap:dig", true));
+	}
+
+	@Test
+	void authenticateByCN() {
+		parameterValueRepository.findAllBy("parameter.id", "service:id:ldap:login-attributes").getFirst().setData("cn,uid");
+		em.flush();
+		final var authentication = new UsernamePasswordAuthenticationToken("Fabrice Daugan", "Secret01");
+		Assertions.assertEquals("fdaugan", resource.authenticate(authentication, "service:id:ldap:dig", true).getName());
 	}
 
 	@Test
@@ -716,135 +696,132 @@ class LdapPluginResourceTest extends AbstractLdapPluginResourceTest {
 
 	@Test
 	void authenticateSecondaryMock() {
-		// Create a new LDAP node pluged to the primary node
+		// Create a new LDAP node plugged to the primary node
 		newLdap();
 
-		final Authentication authentication = new UsernamePasswordAuthenticationToken("mmartin", "complexOne");
-		final Authentication localAuthentication = resource.authenticate(authentication, "service:id:ldap:secondary",
-				false);
+		final var authentication = new UsernamePasswordAuthenticationToken("mmartin", "complexOne");
+		final var localAuthentication = resource.authenticate(authentication, "service:id:ldap:secondary", false);
 		Assertions.assertEquals("mmartin", localAuthentication.getName());
 	}
 
 	@Test
 	void toApplicationUserExists() {
 		// Create a new LDAP node plugged to the primary node
-		final UserOrg user = new UserOrg();
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("marc.martin@sample.com"));
 		user.setFirstName("First");
 		user.setLastName("Last123");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		user.setCompany("ligoj");
 		user.setDepartment("3890");
 		user.setLocalId("8234");
 		Assertions.assertEquals("mmartin", toApplicationUser(resource, user));
 
-		final UserOrg userLdap = userResource.findByIdNoCache("mmartin");
+		final var userLdap = userResource.findByIdNoCache("mmartin");
 		Assertions.assertEquals("mmartin", userLdap.getName());
 		Assertions.assertEquals("Marc", userLdap.getFirstName());
 		Assertions.assertEquals("Martin", userLdap.getLastName());
-		Assertions.assertEquals("marc.martin@sample.com", userLdap.getMails().get(0));
+		Assertions.assertEquals("marc.martin@sample.com", userLdap.getMails().getFirst());
 	}
 
 	@Test
 	void toApplicationUserNew() {
 		// Create a new LDAP node plugged to the primary node
-		final UserOrg user = new UserOrg();
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("some@where.com"));
 		user.setFirstName("First");
 		user.setLastName("Last123");
 		user.setCompany("ligoj");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		Assertions.assertEquals("flast123", toApplicationUser(resource, user));
 
-		final UserOrg userLdap = userResource.findByIdNoCache("flast123");
+		final var userLdap = userResource.findByIdNoCache("flast123");
 		Assertions.assertEquals("flast123", userLdap.getName());
 		Assertions.assertEquals("First", userLdap.getFirstName());
 		Assertions.assertEquals("Last123", userLdap.getLastName());
 		Assertions.assertEquals("ligoj", userLdap.getCompany());
-		Assertions.assertEquals("some@where.com", userLdap.getMails().get(0));
+		Assertions.assertEquals("some@where.com", userLdap.getMails().getFirst());
 		userResource.delete("flast123");
 	}
 
 	@Test
 	void toApplicationUserNewWithCollision() {
 		// Create a new LDAP node plugged to the primary node
-		final UserOrg user = new UserOrg();
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("some@where.com"));
 		user.setFirstName("Marc");
 		user.setLastName("Martin");
 		user.setCompany("ligoj");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		Assertions.assertEquals("mmartin1", toApplicationUser(resource, user));
 
-		final UserOrg userLdap = userResource.findByIdNoCache("mmartin1");
+		final var userLdap = userResource.findByIdNoCache("mmartin1");
 		Assertions.assertEquals("mmartin1", userLdap.getName());
 		Assertions.assertEquals("Marc", userLdap.getFirstName());
 		Assertions.assertEquals("Martin", userLdap.getLastName());
 		Assertions.assertEquals("ligoj", userLdap.getCompany());
-		Assertions.assertEquals("some@where.com", userLdap.getMails().get(0));
+		Assertions.assertEquals("some@where.com", userLdap.getMails().getFirst());
 		userResource.delete("mmartin1");
 	}
 
 	@Test
 	void toApplicationUserTooManyMail() {
-		// Create a new LDAP node pluged to the primary node
-		final UserOrg user = new UserOrg();
+		// Create a new LDAP node plugged to the primary node
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("fabrice.daugan@sample.com"));
 		user.setFirstName("First");
 		user.setLastName("Last123");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		Assertions.assertThrows(NotAuthorizedException.class, () -> toApplicationUser(resource, user));
 	}
 
 	@Test
 	void authenticateSecondaryNoMail() {
-		// Create a new LDAP node pluged to the primary node
-
+		// Create a new LDAP node plugged to the primary node
 		newLdap();
 
-		final Authentication authentication = new UsernamePasswordAuthenticationToken("jdupont", "Azerty01");
+		final var authentication = new UsernamePasswordAuthenticationToken("jdupont", "Secret01");
 		Assertions.assertThrows(NotAuthorizedException.class, () -> resource.authenticate(authentication, "service:id:ldap:secondary", false));
 	}
 
 	@Test
 	void authenticateSecondaryFail() {
-		// Create a new LDAP node pluged to the primary node
+		// Create a new LDAP node plugged to the primary node
 		newLdap();
 
-		final Authentication authentication = new UsernamePasswordAuthenticationToken("fdaugan", "any");
+		final var authentication = new UsernamePasswordAuthenticationToken("fdaugan", "any");
 		Assertions.assertThrows(BadCredentialsException.class, () -> resource.authenticate(authentication, "service:id:ldap:secondary", false));
 	}
 
 	@Test
 	void newApplicationUserSaveFail() {
-		final LdapPluginResource resource = new LdapPluginResource();
-		final UserOrgResource userResource = Mockito.mock(UserOrgResource.class);
+		final var resource = new LdapPluginResource();
+		final var userResource = Mockito.mock(UserOrgResource.class);
 		setUserResource(resource, userResource);
 		Mockito.when(userResource.findByIdNoCache("flast123")).thenReturn(null);
-		Mockito.doThrow(new UncategorizedLdapException("")).when(userResource)
-				.saveOrUpdate(ArgumentMatchers.any(UserOrgEditionVo.class), ArgumentMatchers.eq(true));
+		Mockito.doThrow(new UncategorizedLdapException("")).when(userResource).saveOrUpdate(ArgumentMatchers.any(UserOrgEditionVo.class), ArgumentMatchers.eq(true));
 
-		final UserOrg user = new UserOrg();
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("fabrice.daugan@sample.com"));
 		user.setFirstName("First");
 		user.setLastName("Last123");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		user.setCompany("ligoj");
 		Assertions.assertThrows(UncategorizedLdapException.class, () -> resource.newApplicationUser(user));
 	}
 
 	@Test
 	void newApplicationUserNextLoginFail() {
-		final LdapPluginResource resource = new LdapPluginResource();
-		final UserOrgResource userResource = Mockito.mock(UserOrgResource.class);
+		final var resource = new LdapPluginResource();
+		final var userResource = Mockito.mock(UserOrgResource.class);
 		setUserResource(resource, userResource);
 		Mockito.doThrow(new RuntimeException()).when(userResource).findByIdNoCache("flast123");
 
-		final UserOrg user = new UserOrg();
+		final var user = new UserOrg();
 		user.setMails(Collections.singletonList("fabrice.daugan@sample.com"));
 		user.setFirstName("First");
 		user.setLastName("Last123");
-		user.setName("secondarylogin");
+		user.setName("secondaryLogin");
 		user.setCompany("ligoj");
 		Assertions.assertThrows(RuntimeException.class, () -> resource.newApplicationUser(user));
 	}
